@@ -97,6 +97,12 @@ Added a new version (0.8.3) of FloatCanvas from Chris Barker.  It's now
 in a subpackage of wx.lib.
 
 
+It is now possible to change the tab traversal order of controls on a
+panel or dialog.  For details see the new MoveAfterInTabOrder and
+MoveBeforeInTabOrder methods of wx.Window.
+
+
+
 
 
 2.5.1.5
